# kim-formlabs-bot

./: .env.example  .gitignore  ACCESS_CONTROL_GUIDE.md  ACCESS_SUMMARY.md  APPROVAL_SYSTEM.md  CLAUDE.md  DEPLOYMENT.md  PRD.md  README.md  README_COMPLETE.md  TELEGRAM_BOT.md  VERIFICATION_REPORT.md  access_control.py  approval_system.py  approved_users.json  bot_commands.py  check_access.py  csi_analyzer.py  fix_cloudflare_auth.sh  fixture_generator.py  guided_setup.sh  master_setup.sh  pyproject.toml  requirements.txt  resin_prophet.py  run_command.py  setup_permanent_domain.py  setup_permanent_domain.sh  start.sh  start_auth_only.sh  start_bot_with_tunnel.py  start_bot_with_tunnel.sh  start_kim_bot.sh
bob/: README.md  __init__.py  __main__.py  bot.py  commands.py
docs/: formlabs-local-api-v0.9.12.md  formlabs-web-api-latest.md
src/mcp_formlabs/: auth_server.py  cost_calculator.py  fleet_analytics.py  keychain.py  kim_llm.py  maintenance_tracker.py  materials.py  notification_service.py  preflight.py  preform_client.py  presets.py  server.py  tank_monitor.py  telegram_bot.py  web_api_client.py
test_fixtures/: iphone_15_pro_fixture.scad
tests/: conftest.py  test_commands.py  test_cost_calculator.py  test_fleet_analytics.py  test_kim_llm.py  test_maintenance_tracker.py  test_materials.py  test_notification_service.py  test_preform_client.py  test_tank_monitor.py  test_web_api_client.py
